--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,16 @@
   --foreground: #171717;
 }
 
+html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
+  height: 100vh;
+  margin: 0;
+  padding: 0;
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
