--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-@custom-variant dark (&:where(.dark, .dark *));
+@custom-variant dark (&:where(.dark, .dark *)); /* IMPORTANT PARA DARK THEME E OUTROS */
 
 :root {
   --background: #ffffff;
@@ -21,7 +21,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-html.dark body {
+html.dark body { /* IMPORTANT PARA DARK THEME E OUTROS EM TAILWIND  */
   background-color: #0f172a; /* dark background - tailwind's slate-900 */
   color: #e2e8f0; /* dark mode text color - tailwind's slate-200 */
 }
